# NULL-HORIZON

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  mission_content.md
.github/workflows/: ci.yml
android-app/: README.md  gradle.properties  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/gradle/: libs.versions.toml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/api/: __init__.py
backend/api/alembic/: env.py
backend/api/alembic/versions/: 0001_initial.py  0002_progression.py
backend/api/app/: deps.py  main.py  schemas.py
backend/api/app/core/: __init__.py  config.py  health.py  idempotency.py  security.py
backend/api/app/db/: base.py  models.py
backend/api/app/progression/: __init__.py  engine.py
backend/api/app/providers/: base.py  factory.py  fake.py  hardened.py  local_trusted.py
backend/api/app/redis/: client.py
backend/api/app/routers/: content.py  executions.py  health.py  profiles.py  progress.py
backend/api/tests/: conftest.py  test_auth_progress.py  test_execution_boundary.py  test_executions.py  test_health.py  test_privacy_deletion.py  test_progression.py  test_provider_factory.py
backend/runner/: __init__.py  limits.py  normalize.py  orchestrator.py  providers.py  workspace.py
backend/runner/contracts/: models.py  provider.py
backend/runner/queue/: memory.py
backend/runner/tests/: test_cpp_worker.py  test_limits.py  test_network_guard.py  test_normalize.py  test_orchestrator.py  test_package.py  test_providers.py  test_python_worker.py  test_workspace.py
backend/runner/workers/: cpp_worker.py  network_guard.py  python_worker.py  sitecustomize.py
backend/shared/: __init__.py
content/: README.md
content/chapters/: archive_core.yaml  automation_lab.yaml  black_vault.yaml  comms_relay.yaml  communications_spire.yaml  data_foundry.yaml  drone_foundry.yaml  emergency_interface.yaml  horizon_core.yaml  (+8 more)
docs/: API.md  ARCHITECTURE.md  CONTENT_AUTHORING.md  CURRICULUM.md  DESIGN_SYSTEM.md  PRODUCT_SPEC.md  THREAT_MODEL.md
infra/: README.md
pc-app/: README.md  build.gradle.kts  gradle.properties  run.bat  settings.gradle.kts
scripts/: bootstrap.sh  build_bundle.py  check.sh  requirements-content.txt  validate_content.py
shared/: README.md
(+1052 files in other folders)
