[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "null-horizon-backend"
version = "0.0.1"
description = "NULL HORIZON FastAPI backend (Epic 0 shell)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<2.0.0",
  "ruff>=0.6.0,<1.0.0",
  "mypy>=1.11.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "runner*", "shared*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["api/tests", "runner/tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["api", "runner", "shared"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["api"]
